test/negative/lex_bad_binary.mut
# Negative: invalid binary literal (no digits after 0b)
x: i64 = 0bXX
